<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"/>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone" >

        <!-- sign-in button -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:paddingBottom="20dp"
            android:text="@string/please_log_in"
            android:textAppearance="@style/GuessWordText" >
        </TextView>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/partyModeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        tools:visibility="gone">

        <Button
            android:id="@+id/partyModeHostButton"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/host_party_mode"
            android:visibility="visible"/>
        <Button
            android:id="@+id/partyModeJoinButton"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/join_party_mode"
            android:visibility="visible"/>
        </LinearLayout>

    <!-- gameplay_layout -->

    <LinearLayout
        android:id="@+id/gameplay_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        tools:visibility="visible"
        tools:context=".DrawingActivity" >

        <com.google.example.eightbitartist.DrawView
            android:id="@+id/drawView"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/hello_world" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RelativeLayout
                android:id="@+id/artistUI"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                tools:visibility="gone">

                <com.google.example.eightbitartist.ColorChooser
                    android:id="@+id/colorChooser"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_alignParentLeft="true"
                    android:text="@string/hello_world"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/guessWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textSize="20sp" />


                <LinearLayout
                    android:id="@+id/clearDoneLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/clearButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear" />

                    <Button
                        android:id="@+id/doneButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/done" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/guesserUI"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:visibility="visible">

                <ProgressBar
                    android:id="@+id/guessProgress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/guessProgressText"
                    android:paddingLeft="10dp"
                    android:paddingRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:progress="30"
                    android:max="30"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

                <TextView
                    android:id="@+id/guessProgressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/guessProgress"
                    android:layout_alignBottom="@+id/guessProgress"
                    android:gravity="center_vertical"
                    android:text="30"/>

                <ListView
                    android:id="@+id/listView"
                    android:layout_width="@dimen/guess_list_width"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/guessProgress"
                    android:fadeScrollbars="false"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:text="@string/hello_world" >
                </ListView>

                <LinearLayout
                    android:id="@+id/playerViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/guessProgress"
                    android:layout_toRightOf="@+id/listView"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical" />

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <!-- matchup layout -->

    <LinearLayout
        android:id="@+id/matchup_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible"
        tools:visibility="gone"
        tools:context=".DrawingActivity" >
        
        <TextView
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="@style/HelpText.Caption" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/eight_bit_instructions"
            android:textAppearance="@style/DefaultText" >
        </TextView>

        <LinearLayout
            android:id="@+id/matchup_layout_inner"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:context=".DrawingActivity" >

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_out" />

            <Button
                android:id="@+id/startMatchButton"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/start_match" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>
